refactor code. create folders. rearrange. improve.

--- a/pages/about.html
+++ b/pages/about.html
@@ -11,11 +11,11 @@
       <div class="top-container">
         <div class="navigation-wrapper">
           <div class="nav-left">
-            <a href="../home-page/landing.html"><button>Home</button></a>
+            <a href="../index-page/index.html"><button>Home</button></a>
           </div>
 
           <div class="nav-right">
-            <a href="../notes-page/notes/notes.html"><button>Notes</button></a>
+            <a href="../pages/notes.html"><button>Notes</button></a>
           </div>
         </div>
 
@@ -52,7 +52,7 @@
   </ul>
   <div class="footer-container">
     <div class="footer-left">
-      <a href="/home-page/landing.html">Home</a>
+      <a href="/index-page/index.html">Home</a>
     </div>
   </body>
 </html>
