--- a/index-page/index.html
+++ b/index-page/index.html
@@ -11,16 +11,16 @@
       <div class="top-container">
         <div class="navigation-wrapper">
           <div class="nav-left">
-            <a href="../home-page/landing.html"><button>Home</button></a>
+            <a href="../index-page/index.html"><button>Home</button></a>
           </div>
 
           <div class="nav-right">
-            <a href="../about-page/about.html"><button>About</button></a>
+            <a href="../pages/about.html"><button>About</button></a>
           </div>
         </div>
 
         <div class="nav-right">
-          <a href="../notes-page/notes/notes.html"><button>Notes</button></a>
+          <a href="../pages/notes.html"><button>Notes</button></a>
         </div>
       </div>
 
@@ -34,10 +34,10 @@
         </div>
       </div>
 
-      <div class="content-container">
+      <!-- <div class="content-container">
         <div class="article-card-wrapper">
           <div class="article-card-header">
-            <h2><a href="../notes-page/notes/notes.html">Wednesday, September 7 2022<a/></h2>
+            <h2><a href="../notes/September_2022_FE_Notes/September_2022.html">Wednesday, September 7 2022<a/></h2>
           </div>
 
           <div class="article-card-content">
@@ -45,13 +45,13 @@
           </div>
 
           <div class="article-card-date">
-            <a href="../notes-page/notes/notes9_7_2022.html">September 7 2022</a>
+            <a href="../notes/September_2022_FE_Notes/notes9_7_2022.html">September 7 2022</a>
           </div>
         </div>
 
         <div class="article-card-wrapper">
           <div class="article-card-header">
-            <h2><a href="../notes-page/notes/notes.html">Thursday, September 8 2022</a></h2>
+            <h2><a href="../notes/September_2022_FE_Notes/September_2022.html">Thursday, September 8 2022</a></h2>
           </div>
 
           <div class="article-card-content">
@@ -59,12 +59,12 @@
           </div>
 
           <div class="article-card-date">
-            <a href="../notes-page/notes/notes9_8_2022.html">September 8 2022</a>
+            <a href="../notes/September_2022_FE_Notes/notes9_8_2022.html">September 8 2022</a>
           </div>
         </div>
         <div class="article-card-wrapper">
           <div class="article-card-header">
-            <h2><a href="../notes-page/notes/notes.html">Friday, September 9 2022</a></h2>
+            <h2><a href="../notes/September_2022_FE_Notes/September_2022.html">Friday, September 9 2022</a></h2>
           </div>
 
           <div class="article-card-content">
@@ -72,12 +72,12 @@
           </div>
 
           <div class="article-card-date">
-            <a href="../notes-page/notes/notes9_9_2022.html">September 9 2022</a>
+            <a href="../notes/September_2022_FE_Notes/notes9_9_2022.html">September 9 2022</a>
           </div>
         </div>
         <div class="article-card-wrapper">
           <div class="article-card-header">
-            <h2><a href="../notes-page/notes/notes.html">Monday, September 12 2022</a></h2>
+            <h2><a href="../notes/September_2022_FE_Notes/September_2022.html">Monday, September 12 2022</a></h2>
           </div>
 
           <div class="article-card-content">
@@ -85,12 +85,12 @@
           </div>
 
           <div class="article-card-date">
-            <a href="../notes-page/notes/notes9_12_2022.html">September 12, 2022</a>
+            <a href="../notes/September_2022_FE_Notes/notes9_12_2022.html">September 12, 2022</a>
           </div>
         </div>
         <div class="article-card-wrapper">
           <div class="article-card-header">
-            <h2><a href="../notes-page/notes/notes.html">Tuesday, September 13 2022</a></h2>
+            <h2><a href="../notes/September_2022_FE_Notes/September_2022.html">Tuesday, September 13 2022</a></h2>
           </div>
 
           <div class="article-card-content">
@@ -98,12 +98,12 @@
           </div>
 
           <div class="article-card-date">
-            <a href="../notes-page/notes/notes9_13_2022.html">September 13, 2022</a>
+            <a href="../notes/September_2022_FE_Notes/notes9_13_2022.html">September 13, 2022</a>
           </div>
         </div>
         <div class="article-card-wrapper">
           <div class="article-card-header">
-            <h2><a href="../notes-page/notes/notes.html">Wednesday, September 14, 2022</a></h2>
+            <h2><a href="../notes/September_2022_FE_Notes/September_2022.html">Wednesday, September 14, 2022</a></h2>
           </div>
 
           <div class="article-card-content">
@@ -111,12 +111,12 @@
           </div>
 
           <div class="article-card-date">
-            <a href="../notes-page/notes/notes9_14_2022.html">September 14, 2022</a>
+            <a href="../notes/September_2022_FE_Notes/notes9_14_2022.html">September 14, 2022</a>
           </div>
         </div>
         <div class="article-card-wrapper">
           <div class="article-card-header">
-            <h2><a href="../notes-page/notes/notes.html">Thursday, September 15, 2022</a></h2>
+            <h2><a href="../notes/September_2022_FE_Notes/September_2022.html">Thursday, September 15, 2022</a></h2>
           </div>
 
           <div class="article-card-content">
@@ -124,14 +124,14 @@
           </div>
 
           <div class="article-card-date">
-            <a href="../notes-page/notes/notes9_15_2022.html">September 15, 2022</a>
+            <a href="../notes/September_2022_FE_Notes/notes9_15_2022.html">September 15, 2022</a>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="footer-container">
         <div class="footer-left">
-          <a href="#">Home</a>
+          <a href="/index-page/index.html">Home</a>
         </div>
 
         <div class="footer-right">
