--- a/notes/September_2022_FE_Notes/notes9_13_2022.html
+++ b/notes/September_2022_FE_Notes/notes9_13_2022.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tuesday, September 13 2022</title>
+    <title>Daily Notes</title>
   </head>
   <body>
+    <h1>Tuesday, September 13 2022</h1>
     <h1>Front End Digital Notes Day 6</h1>
     <h1>@Innovation Hub 84078</h1>
     <ul>
