added notes to sept 9. added wednesday's notes

--- a/notes/September_2022_FE_Notes/September_2022.html
+++ b/notes/September_2022_FE_Notes/September_2022.html
@@ -11,7 +11,7 @@
       <div class="top-container">
         <div class="navigation-wrapper">
           <div class="nav-left">
-            <a href="../index-page/index.html"><button>Home</button></a>
+            <a href="/index-page/index.html"><button>Home</button></a>
           </div>
 
           <div class="nav-right">
@@ -122,11 +122,21 @@
     </div>
     <div class="article-card-wrapper">
       <div class="article-card-header">
-        <h2><a href="../September_2022_FE_Notes/notes9_19_2022.html">Tuesday, September 20, 2022</a></h2>
+        <h2><a href="../September_2022_FE_Notes/notes9_20_2022.html">Tuesday, September 20, 2022</a></h2>
       </div>
 
       <div class="article-card-content">
         <p>Front End class  w/Ryan Curtis Digital Notes Day 10</p>
+      </div>
+    </div>
+
+    <div class="article-card-wrapper">
+      <div class="article-card-header">
+        <h2><a href="../September_2022_FE_Notes/notes9_21_2022.html">Wednesday September 21, 2022</a></h2>
+      </div>
+
+      <div class="article-card-content">
+        <p>Front End class  w/Ryan Curtis Digital Notes Day 11</p>
       </div>
     </div>
 
