--- a/notes/September_2022_FE_Notes/notes9_9_2022.html
+++ b/notes/September_2022_FE_Notes/notes9_9_2022.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friday, September 9 2022</title>
+    <title>Daily Notes</title>
   </head>
   <body>
-    <h1>Front End Notes - 9/9/2022 Day 4</h1>
-    <h1>@Innovation Hub 84078</h1>
+    <div>
+    <h1>Friday, September 9, 2022 Day 4</h1>
+    <h2>@Innovation Hub</h2>
+    <h3>Front End Class w/ Ryan Curtis</h3>
     <h1>Dynamically Produced</h1>
 
     <ul>
@@ -19,6 +21,40 @@
       <li>SSL -</li>
       <li>Head - represents a collection of meta data for the document</li>
       <li>Trust Tokens -</li>
+      <li>Request Response Model</li>
+      <li>Client (browser) -> GET -> Web Server</li>
+          Or
+      <li>Client (browser) -> POST , {first_nmae: “Ryan:} -> Web Server</li>
+      <li>Client <- RESONSE <- Web Server</li>
+          (website, error, document, etc….)
+      <li>STATELESS REQUESTS : </li>
+      <li>Server serves files : </li>
+      <li>HTTP Verbs (Request Methods)</li>
+      <li>GET  -> Responds with the requested resource, doesn’t receive (READ)</li>
+      <li>POST -> Sending data to a server (~CREATE)</li>
+      <li>PUT / PATCH -> UPDATE</li>
+      <li>DELETE -> Delete Data. Archived</li>
+      <li>The browser specifically requests through the GET</li>
+      <li>CRUD - Create, Read, Date, Destroy / Delete</li>
+      <li>JSON -  Language of the web -> data</li>
+      <li>JavaScript Object Notation</li>
+        
+      <li>RESTful Routing - Representational State Transfer</li>
+        
+      <li>HTML -> Hyper Text Markup Language (content on the page)</li>
+      <li>CSS -> Cascading Style Sheets (styles [color, position, front, etc])</li>
+      <li>JS -> JavaScript (interactivity)</li>
+      <div>
+        EXAMPLE:
+        <div>
+        <h1>Hi, Ryan.</h1>
+      </div>
+        <li>Websites -> collection of web pages (could be as much as a single page web site)</li>
+        <li>Web Pages -> A single page (document) (which could contain multiple documents)</li>
+        <li>Web apps -> Dynamic, data storage, can read and write</li>
+        <li>Monolithic Applications -> Whole app is self contained</li>
+          vs.
+        <li>Microservice Applications -> rent end app, backend application, oauth </li>
     </ul>
   </body>
 </html>
