--- a/index-page/index.html
+++ b/index-page/index.html
@@ -5,43 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trilogy Website Home</title>
+
+    <link href="/styles/common.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="/styles/home.css" />
+    <link rel="stylesheet" href="/styles/media-queries.css" />
   </head>
+
   <body>
-    <div class="three-column-layout">
-      <div class="top-container">
-        <div class="navigation-wrapper">
-          <div class="nav-left">
-            <a href="../index-page/index.html"><button>Home</button></a>
-          </div>
-
-          <div class="nav-right">
-            <a href="../pages/about.html"><button>About</button></a>
-          </div>
-        </div>
-
-        <div class="nav-right">
-          <a href="../pages/notes.html"><button>Notes</button></a>
-        </div>
-      </div>
-
-        <div class="banner-image-container">
-          <div class="banner-img-wrapper">
-            <img
-              src="https://source.unsplash.com/random/?pink"
-              alt="random pink"
-            />
-          </div>
-        </div>
-      </div>
-
-      <div class="footer-container">
-        <div class="footer-left">
+    <div class="navbar">
+      <div class="nav-links">
+        <div class="nav-link">
           <a href="/index-page/index.html">Home</a>
         </div>
 
-        <div class="footer-right">
+        <div class="nav-link">
+          <a href="/pages/about.html">About</a>
+        </div>
+
+        <div class="nav-link">
+          <a href="/pages/notes.html">Notes</a>
         </div>
       </div>
+    </div>
+
+    <div class="banner-image-container">
+      <div class="banner-img-wrapper">
+        <img src="https://source.unsplash.com/random/?pink" alt="random pink" />
+      </div>
+    </div>
+
+    <div class="footer-container">
+      <div class="footer-left">
+        <a href="/index-page/index.html">Home</a>
+      </div>
+
+      <div class="footer-right"></div>
     </div>
   </body>
 </html>
