--- a/notes/September_2022_FE_Notes/September_2022.html
+++ b/notes/September_2022_FE_Notes/September_2022.html
@@ -140,6 +140,36 @@
       </div>
     </div>
 
+    <div class="article-card-wrapper">
+      <div class="article-card-header">
+        <h2><a href="../September_2022_FE_Notes/notes9_23_2022.html">Friday, September 23, 2022</a></h2>
+      </div>
+
+      <div class="article-card-content">
+        <p>Front End class  w/Ryan Curtis Digital Notes Day 12</p>
+      </div>
+    </div>
+
+    <div class="article-card-wrapper">
+      <div class="article-card-header">
+        <h2><a href="../September_2022_FE_Notes/notes9_26_2022.html">Monday, September 26, 2022</a></h2>
+      </div>
+
+      <div class="article-card-content">
+        <p>Front End class  w/Ryan Curtis Digital Notes Day 13</p>
+      </div>
+    </div>
+
+    <div class="article-card-wrapper">
+      <div class="article-card-header">
+        <h2><a href="../September_2022_FE_Notes/notes9_27_2022.html">Tuesday, September 27, 2022</a></h2>
+      </div>
+
+      <div class="article-card-content">
+        <p>Front End class  w/Ryan Curtis Digital Notes Day 14</p>
+      </div>
+    </div>
+
         </div>
       </div>
 
